
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {int tv_sec; scalar_t__ tv_usec; } ;
struct TYPE_3__ {int tv_sec; scalar_t__ tv_usec; } ;
struct itimerval {TYPE_2__ it_value; TYPE_1__ it_interval; } ;
typedef int Connect ;


 char* End ;
 int ITIMER_REAL ;
 int MAX_PAYLOAD_LEN ;
 char* OK ;




 int SIGALRM ;
 scalar_t__ SIG_ERR ;
 int assert (int) ;
 int dump_fd (int,unsigned int) ;
 int exit (int) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int * out_stream ;
 int parse_query_payload (int,unsigned int,char*) ;
 int perror (char*) ;
 int read (int,char*,int) ;
 int read_header (int,unsigned char*,unsigned int*,char*) ;
 int send_pong (int) ;
 int send_queryhit (int,char*,char*) ;
 int setitimer (int ,struct itimerval*,int) ;
 scalar_t__ signal (int ,int ) ;
 int * stderr ;
 unsigned int strlen (char*) ;
 scalar_t__ strncmp (char*,char*,unsigned int) ;
 int timer_send_ping ;
 int write (int,char*,unsigned int) ;

int
main(int argc, char * argv[]){
unsigned int seed;
  int net_in_fd = 0;
  char *msg;
  char criteria[4096];
  char c;
  char buf[1024];
  int num_read;
  unsigned char payload_descr;
  unsigned payload_len;
  char payload[MAX_PAYLOAD_LEN];
  char descr_id[16];
  int queryhit_sent = 0;
  int i;

  int net_out_fd = 1;
  struct itimerval itv;



  if((out_stream = fopen("/dev/tty", "w")) == ((void*)0)){
    perror("Can't open /dev/tty");

    out_stream = stderr;
  }

  if(signal(SIGALRM, timer_send_ping) == SIG_ERR){
    fprintf(out_stream, "Couldn't set the signal handler");
    exit(1);
  }

  itv.it_interval.tv_sec = 5;
  itv.it_interval.tv_usec = 0;
  itv.it_value.tv_sec = 5;
  itv.it_value.tv_usec = 0;


  if(setitimer(ITIMER_REAL, &itv, 0x00) == -1){
    fprintf(out_stream, "Couldn't set the signal handler");
    exit(1);
  }




  num_read = read(net_in_fd, buf, sizeof(Connect));
  if(num_read != sizeof(Connect)){
    fprintf(out_stream, "Can't read \"Connect\" from the net\n");
    exit(1);
  }




  num_read = read(net_in_fd, buf, strlen(End));
  if(num_read != strlen(End)){
    fprintf(out_stream, "Connection closed before double \\n\n");
    exit(1);
  }

  while(strncmp(buf, End, strlen(End)) != 0){
    fprintf(out_stream, "%s\n", buf);



    for(i = 0; i < strlen(End) - 1; i++){
      buf[i] = buf[i+1];
    }
    num_read = read(net_in_fd, &buf[strlen(End) - 1], 1);
    if(num_read != 1){
      fprintf(out_stream, "Connection closed before double \\n\n");
      exit(1);
    }
  }



  write(net_out_fd, OK, strlen(OK));
  fprintf(out_stream, "Connected (hopefully)\n");


  dump_fd(net_in_fd, strlen("GNUTELLA/0.6 200 OK\r\n\r\n"));


  while(1){
    if(!read_header(net_in_fd,
      &payload_descr,
      &payload_len,
      descr_id)) break;
    assert(payload_len <= MAX_PAYLOAD_LEN);
    switch(payload_descr){
    case 131:

      fprintf(out_stream, "Received a Ping message\n");
      if(payload_len != 0){
 fprintf(out_stream, "Payload for Ping > 0 !\n");
      }
      fprintf(out_stream, "Sending a Pong message\n");
      send_pong(net_out_fd);
      break;
    case 130:

      fprintf(out_stream, "Received a Pong message\n");
      if(!dump_fd(net_in_fd, payload_len)) break;
      break;
    case 128:

      fprintf(out_stream, "Received a Query message\n");
      if(!parse_query_payload(net_in_fd, payload_len, criteria)) break;
      if(!queryhit_sent){
 queryhit_sent = 1;
 fprintf(out_stream, "Sending a QueryHit message\n");
 send_queryhit(net_out_fd, criteria, descr_id);
 fprintf(out_stream, "QueryHit sent\n");
      } else {
 fprintf(out_stream, "NOT sending a QueryHit message\n");
      }
      break;
    case 129:

      fprintf(out_stream, "Received a Push message\n");
      if(!dump_fd(net_in_fd, payload_len)) break;
      break;
    }
  }
}
