; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24857.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24857.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.itimerval = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i64 }
%struct.TYPE_3__ = type { i32, i64 }

@MAX_PAYLOAD_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"/dev/tty\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@out_stream = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [20 x i8] c"Can't open /dev/tty\00", align 1
@stderr = common dso_local global i32* null, align 8
@SIGALRM = common dso_local global i32 0, align 4
@timer_send_ping = common dso_local global i32 0, align 4
@SIG_ERR = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [32 x i8] c"Couldn't set the signal handler\00", align 1
@ITIMER_REAL = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [35 x i8] c"Can't read \22Connect\22 from the net\0A\00", align 1
@End = common dso_local global i8* null, align 8
@.str.5 = private unnamed_addr constant [36 x i8] c"Connection closed before double \\n\0A\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@OK = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [23 x i8] c"Connected (hopefully)\0A\00", align 1
@.str.8 = private unnamed_addr constant [24 x i8] c"GNUTELLA/0.6 200 OK\0D\0A\0D\0A\00", align 1
@.str.9 = private unnamed_addr constant [25 x i8] c"Received a Ping message\0A\00", align 1
@.str.10 = private unnamed_addr constant [24 x i8] c"Payload for Ping > 0 !\0A\00", align 1
@.str.11 = private unnamed_addr constant [24 x i8] c"Sending a Pong message\0A\00", align 1
@.str.12 = private unnamed_addr constant [25 x i8] c"Received a Pong message\0A\00", align 1
@.str.13 = private unnamed_addr constant [26 x i8] c"Received a Query message\0A\00", align 1
@.str.14 = private unnamed_addr constant [28 x i8] c"Sending a QueryHit message\0A\00", align 1
@.str.15 = private unnamed_addr constant [15 x i8] c"QueryHit sent\0A\00", align 1
@.str.16 = private unnamed_addr constant [32 x i8] c"NOT sending a QueryHit message\0A\00", align 1
@.str.17 = private unnamed_addr constant [25 x i8] c"Received a Push message\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca [4096 x i8], align 16
  %10 = alloca i8, align 1
  %11 = alloca [1024 x i8], align 16
  %12 = alloca i32, align 4
  %13 = alloca i8, align 1
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  %17 = alloca [16 x i8], align 16
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca %struct.itimerval, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %7, align 4
  %22 = load i32, i32* @MAX_PAYLOAD_LEN, align 4
  %23 = zext i32 %22 to i64
  %24 = call i8* @llvm.stacksave()
  store i8* %24, i8** %15, align 8
  %25 = alloca i8, i64 %23, align 16
  store i64 %23, i64* %16, align 8
  store i32 0, i32* %18, align 4
  store i32 1, i32* %20, align 4
  %26 = call i32* @fopen(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %26, i32** @out_stream, align 8
  %27 = icmp eq i32* %26, null
  br i1 %27, label %28, label %31

28:                                               ; preds = %2
  %29 = call i32 @perror(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0))
  %30 = load i32*, i32** @stderr, align 8
  store i32* %30, i32** @out_stream, align 8
  br label %31

31:                                               ; preds = %28, %2
  %32 = load i32, i32* @SIGALRM, align 4
  %33 = load i32, i32* @timer_send_ping, align 4
  %34 = call i64 @signal(i32 %32, i32 %33)
  %35 = load i64, i64* @SIG_ERR, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %41

37:                                               ; preds = %31
  %38 = load i32*, i32** @out_stream, align 8
  %39 = call i32 (i32*, i8*, ...) @fprintf(i32* %38, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0))
  %40 = call i32 @exit(i32 1) #4
  unreachable

41:                                               ; preds = %31
  %42 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %21, i32 0, i32 1
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  store i32 5, i32* %43, align 8
  %44 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %21, i32 0, i32 1
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 1
  store i64 0, i64* %45, align 8
  %46 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %21, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  store i32 5, i32* %47, align 8
  %48 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %21, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 1
  store i64 0, i64* %49, align 8
  %50 = load i32, i32* @ITIMER_REAL, align 4
  %51 = call i32 @setitimer(i32 %50, %struct.itimerval* %21, i32 0)
  %52 = icmp eq i32 %51, -1
  br i1 %52, label %53, label %57

53:                                               ; preds = %41
  %54 = load i32*, i32** @out_stream, align 8
  %55 = call i32 (i32*, i8*, ...) @fprintf(i32* %54, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0))
  %56 = call i32 @exit(i32 1) #4
  unreachable

57:                                               ; preds = %41
  %58 = load i32, i32* %7, align 4
  %59 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %60 = call i32 @read(i32 %58, i8* %59, i32 4)
  store i32 %60, i32* %12, align 4
  %61 = load i32, i32* %12, align 4
  %62 = sext i32 %61 to i64
  %63 = icmp ne i64 %62, 4
  br i1 %63, label %64, label %68

64:                                               ; preds = %57
  %65 = load i32*, i32** @out_stream, align 8
  %66 = call i32 (i32*, i8*, ...) @fprintf(i32* %65, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0))
  %67 = call i32 @exit(i32 1) #4
  unreachable

68:                                               ; preds = %57
  %69 = load i32, i32* %7, align 4
  %70 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %71 = load i8*, i8** @End, align 8
  %72 = call i32 @strlen(i8* %71)
  %73 = call i32 @read(i32 %69, i8* %70, i32 %72)
  store i32 %73, i32* %12, align 4
  %74 = load i32, i32* %12, align 4
  %75 = load i8*, i8** @End, align 8
  %76 = call i32 @strlen(i8* %75)
  %77 = icmp ne i32 %74, %76
  br i1 %77, label %78, label %82

78:                                               ; preds = %68
  %79 = load i32*, i32** @out_stream, align 8
  %80 = call i32 (i32*, i8*, ...) @fprintf(i32* %79, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.5, i64 0, i64 0))
  %81 = call i32 @exit(i32 1) #4
  unreachable

82:                                               ; preds = %68
  br label %83

83:                                               ; preds = %126, %82
  %84 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %85 = load i8*, i8** @End, align 8
  %86 = load i8*, i8** @End, align 8
  %87 = call i32 @strlen(i8* %86)
  %88 = call i64 @strncmp(i8* %84, i8* %85, i32 %87)
  %89 = icmp ne i64 %88, 0
  br i1 %89, label %90, label %127

90:                                               ; preds = %83
  %91 = load i32*, i32** @out_stream, align 8
  %92 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %93 = call i32 (i32*, i8*, ...) @fprintf(i32* %91, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8* %92)
  store i32 0, i32* %19, align 4
  br label %94

94:                                               ; preds = %109, %90
  %95 = load i32, i32* %19, align 4
  %96 = load i8*, i8** @End, align 8
  %97 = call i32 @strlen(i8* %96)
  %98 = sub i32 %97, 1
  %99 = icmp ult i32 %95, %98
  br i1 %99, label %100, label %112

100:                                              ; preds = %94
  %101 = load i32, i32* %19, align 4
  %102 = add nsw i32 %101, 1
  %103 = sext i32 %102 to i64
  %104 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 %103
  %105 = load i8, i8* %104, align 1
  %106 = load i32, i32* %19, align 4
  %107 = sext i32 %106 to i64
  %108 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 %107
  store i8 %105, i8* %108, align 1
  br label %109

109:                                              ; preds = %100
  %110 = load i32, i32* %19, align 4
  %111 = add nsw i32 %110, 1
  store i32 %111, i32* %19, align 4
  br label %94

112:                                              ; preds = %94
  %113 = load i32, i32* %7, align 4
  %114 = load i8*, i8** @End, align 8
  %115 = call i32 @strlen(i8* %114)
  %116 = sub i32 %115, 1
  %117 = zext i32 %116 to i64
  %118 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 %117
  %119 = call i32 @read(i32 %113, i8* %118, i32 1)
  store i32 %119, i32* %12, align 4
  %120 = load i32, i32* %12, align 4
  %121 = icmp ne i32 %120, 1
  br i1 %121, label %122, label %126

122:                                              ; preds = %112
  %123 = load i32*, i32** @out_stream, align 8
  %124 = call i32 (i32*, i8*, ...) @fprintf(i32* %123, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.5, i64 0, i64 0))
  %125 = call i32 @exit(i32 1) #4
  unreachable

126:                                              ; preds = %112
  br label %83

127:                                              ; preds = %83
  %128 = load i32, i32* %20, align 4
  %129 = load i8*, i8** @OK, align 8
  %130 = load i8*, i8** @OK, align 8
  %131 = call i32 @strlen(i8* %130)
  %132 = call i32 @write(i32 %128, i8* %129, i32 %131)
  %133 = load i32*, i32** @out_stream, align 8
  %134 = call i32 (i32*, i8*, ...) @fprintf(i32* %133, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.7, i64 0, i64 0))
  %135 = load i32, i32* %7, align 4
  %136 = call i32 @strlen(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.8, i64 0, i64 0))
  %137 = call i32 @dump_fd(i32 %135, i32 %136)
  br label %138

138:                                              ; preds = %209, %127
  br label %139

139:                                              ; preds = %138
  %140 = load i32, i32* %7, align 4
  %141 = getelementptr inbounds [16 x i8], [16 x i8]* %17, i64 0, i64 0
  %142 = call i32 @read_header(i32 %140, i8* %13, i32* %14, i8* %141)
  %143 = icmp ne i32 %142, 0
  br i1 %143, label %145, label %144

144:                                              ; preds = %139
  br label %210

145:                                              ; preds = %139
  %146 = load i32, i32* %14, align 4
  %147 = load i32, i32* @MAX_PAYLOAD_LEN, align 4
  %148 = icmp ule i32 %146, %147
  %149 = zext i1 %148 to i32
  %150 = call i32 @assert(i32 %149)
  %151 = load i8, i8* %13, align 1
  %152 = zext i8 %151 to i32
  switch i32 %152, label %209 [
    i32 131, label %153
    i32 130, label %166
    i32 128, label %175
    i32 129, label %200
  ]

153:                                              ; preds = %145
  %154 = load i32*, i32** @out_stream, align 8
  %155 = call i32 (i32*, i8*, ...) @fprintf(i32* %154, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0))
  %156 = load i32, i32* %14, align 4
  %157 = icmp ne i32 %156, 0
  br i1 %157, label %158, label %161

158:                                              ; preds = %153
  %159 = load i32*, i32** @out_stream, align 8
  %160 = call i32 (i32*, i8*, ...) @fprintf(i32* %159, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.10, i64 0, i64 0))
  br label %161

161:                                              ; preds = %158, %153
  %162 = load i32*, i32** @out_stream, align 8
  %163 = call i32 (i32*, i8*, ...) @fprintf(i32* %162, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.11, i64 0, i64 0))
  %164 = load i32, i32* %20, align 4
  %165 = call i32 @send_pong(i32 %164)
  br label %209

166:                                              ; preds = %145
  %167 = load i32*, i32** @out_stream, align 8
  %168 = call i32 (i32*, i8*, ...) @fprintf(i32* %167, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.12, i64 0, i64 0))
  %169 = load i32, i32* %7, align 4
  %170 = load i32, i32* %14, align 4
  %171 = call i32 @dump_fd(i32 %169, i32 %170)
  %172 = icmp ne i32 %171, 0
  br i1 %172, label %174, label %173

173:                                              ; preds = %166
  br label %209

174:                                              ; preds = %166
  br label %209

175:                                              ; preds = %145
  %176 = load i32*, i32** @out_stream, align 8
  %177 = call i32 (i32*, i8*, ...) @fprintf(i32* %176, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.13, i64 0, i64 0))
  %178 = load i32, i32* %7, align 4
  %179 = load i32, i32* %14, align 4
  %180 = getelementptr inbounds [4096 x i8], [4096 x i8]* %9, i64 0, i64 0
  %181 = call i32 @parse_query_payload(i32 %178, i32 %179, i8* %180)
  %182 = icmp ne i32 %181, 0
  br i1 %182, label %184, label %183

183:                                              ; preds = %175
  br label %209

184:                                              ; preds = %175
  %185 = load i32, i32* %18, align 4
  %186 = icmp ne i32 %185, 0
  br i1 %186, label %196, label %187

187:                                              ; preds = %184
  store i32 1, i32* %18, align 4
  %188 = load i32*, i32** @out_stream, align 8
  %189 = call i32 (i32*, i8*, ...) @fprintf(i32* %188, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.14, i64 0, i64 0))
  %190 = load i32, i32* %20, align 4
  %191 = getelementptr inbounds [4096 x i8], [4096 x i8]* %9, i64 0, i64 0
  %192 = getelementptr inbounds [16 x i8], [16 x i8]* %17, i64 0, i64 0
  %193 = call i32 @send_queryhit(i32 %190, i8* %191, i8* %192)
  %194 = load i32*, i32** @out_stream, align 8
  %195 = call i32 (i32*, i8*, ...) @fprintf(i32* %194, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.15, i64 0, i64 0))
  br label %199

196:                                              ; preds = %184
  %197 = load i32*, i32** @out_stream, align 8
  %198 = call i32 (i32*, i8*, ...) @fprintf(i32* %197, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.16, i64 0, i64 0))
  br label %199

199:                                              ; preds = %196, %187
  br label %209

200:                                              ; preds = %145
  %201 = load i32*, i32** @out_stream, align 8
  %202 = call i32 (i32*, i8*, ...) @fprintf(i32* %201, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.17, i64 0, i64 0))
  %203 = load i32, i32* %7, align 4
  %204 = load i32, i32* %14, align 4
  %205 = call i32 @dump_fd(i32 %203, i32 %204)
  %206 = icmp ne i32 %205, 0
  br i1 %206, label %208, label %207

207:                                              ; preds = %200
  br label %209

208:                                              ; preds = %200
  br label %209

209:                                              ; preds = %145, %208, %207, %199, %183, %174, %173, %161
  br label %138

210:                                              ; preds = %144
  %211 = load i8*, i8** %15, align 8
  call void @llvm.stackrestore(i8* %211)
  %212 = load i32, i32* %3, align 4
  ret i32 %212
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @fopen(i8*, i8*) #2

declare dso_local i32 @perror(i8*) #2

declare dso_local i64 @signal(i32, i32) #2

declare dso_local i32 @fprintf(i32*, i8*, ...) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @setitimer(i32, %struct.itimerval*, i32) #2

declare dso_local i32 @read(i32, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i64 @strncmp(i8*, i8*, i32) #2

declare dso_local i32 @write(i32, i8*, i32) #2

declare dso_local i32 @dump_fd(i32, i32) #2

declare dso_local i32 @read_header(i32, i8*, i32*, i8*) #2

declare dso_local i32 @assert(i32) #2

declare dso_local i32 @send_pong(i32) #2

declare dso_local i32 @parse_query_payload(i32, i32, i8*) #2

declare dso_local i32 @send_queryhit(i32, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
